# BabelWires

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  allSharedLibrariesPlan.md
BabelWiresExe/: CMakeLists.txt  babelWiresOptions.cpp  babelWiresOptions.hpp  main.cpp  seqWiresOptions.cpp
BabelWiresLib/: CMakeLists.txt  babelWiresLibExport.hpp  libRegistration.cpp  libRegistration.hpp
BabelWiresLib/Commands/: activateOptionalCommand.cpp  activateOptionalCommand.hpp  addElementCommand.cpp  addElementCommand.hpp  addEntryToArrayCommand.cpp  addEntryToArrayCommand.hpp  addModifierCommand.cpp  addModifierCommand.hpp  changeFileCommand.cpp  changeFileCommand.hpp  commandManager.cpp  commandManager.hpp  commandManager_inl.hpp  commandTimestamp.hpp  commands.cpp  commands.hpp  commands_inl.hpp  deactivateOptionalCommand.cpp  deactivateOptionalCommand.hpp  moveElementCommand.cpp  moveElementCommand.hpp  pasteElementsCommand.cpp  pasteElementsCommand.hpp  removeAllEditsCommand.cpp  removeAllEditsCommand.hpp  removeElementCommand.cpp  removeElementCommand.hpp  removeEntryFromArrayCommand.cpp  removeEntryFromArrayCommand.hpp  removeFailedModifiersCommand.cpp  removeFailedModifiersCommand.hpp  removeModifierCommand.cpp  removeModifierCommand.hpp  resizeElementCommand.cpp  resizeElementCommand.hpp  setArraySizeCommand.cpp  setArraySizeCommand.hpp  setExpandedCommand.cpp  setExpandedCommand.hpp
BabelWiresLib/Enums/: addBlank.cpp  addBlank.hpp  addBlankToEnum.cpp  addBlankToEnum.hpp  addDummy.cpp  addDummy.hpp  enum.cpp  enum.hpp  enumFeature.cpp  enumFeature.hpp  enumValue.cpp  enumWithCppEnum.hpp  enumWithDummy.cpp  enumWithDummy.hpp
BabelWiresLib/Features/: arrayFeature.cpp  arrayFeature.hpp  childValueFeature.cpp  childValueFeature.hpp  compoundFeature.cpp  compoundFeature.hpp  enumFeature.cpp  enumFeature.hpp  feature.cpp  feature.hpp  featureMixins.hpp  featureMixins_inl.hpp  features.cpp  features.hpp  heavyValueFeature.hpp  heavyValueFeature_inl.hpp  mapFeature.cpp  mapFeature.hpp  modelExceptions.hpp  numericFeature.cpp  numericFeature.hpp  numericFeature_inl.hpp  recordFeature.cpp  recordFeature.hpp  recordFeature_inl.hpp  recordWithOptionalsFeature.cpp  recordWithOptionalsFeature.hpp  rootFeature.cpp  rootFeature.hpp  simpleValueFeature.cpp  simpleValueFeature.hpp  stringFeature.cpp  stringFeature.hpp  unionFeature.cpp  unionFeature.hpp  valueFeature.cpp  valueFeature.hpp  valueFeatureHelper.cpp  valueFeatureHelper.hpp  valueTreeChild.cpp  (+5 more)
BabelWiresLib/FileFormat/: fileFeature.cpp  fileFeature.hpp  filePath.cpp  filePath.hpp  sourceFileFormat.cpp  sourceFileFormat.hpp  targetFileFormat.cpp  targetFileFormat.hpp
BabelWiresLib/Identifiers/: declareIdentifier.cpp  declareIdentifier.hpp  identifier.cpp  identifier.hpp  identifierRegistry.cpp  identifierRegistry.hpp  registeredIdentifier.cpp  registeredIdentifier.hpp
BabelWiresLib/Instance/: arrayTypeInstance.cpp  arrayTypeInstance.hpp  enumTypeInstance.hpp  instance.hpp  instanceDSL.hpp  instanceOf.hpp  instanceOfBuiltInTypes.hpp  instanceTemplates.hpp  instanceUtils.cpp  instanceUtils.hpp  intTypeInstance.hpp  mapTypeInstance.hpp  rationalTypeInstance.hpp  recordTypeInstance.cpp  recordTypeInstance.hpp  recordWithVariantsTypeInstance.cpp  recordWithVariantsTypeInstance.hpp  stringTypeInstance.hpp
BabelWiresLib/InstanceOf/: instanceOfArrayType.cpp  instanceOfArrayType.hpp  instanceOfBuiltInTypes.hpp  instanceOfIntType.hpp  instanceOfRecordType.cpp  instanceOfRecordType.hpp  instanceOfRecordWithVariantsType.cpp  instanceOfRecordWithVariantsType.hpp
BabelWiresLib/Maps/: discreteMapEntry.hpp  discreteMapEntry_inl.hpp  enumMap.hpp  map.cpp  map.hpp  mapData.cpp  mapData.hpp  mapEntry.cpp  mapEntry.hpp  mapEntryData.cpp  mapEntryData.hpp  mapProject.cpp  mapProject.hpp  mapProjectEntry.cpp  mapProjectEntry.hpp  mapSerialization.cpp  mapSerialization.hpp  mapType.cpp  mapType.hpp  mapTypeConstructor.cpp  mapTypeConstructor.hpp  typeSystem.cpp  typeSystem.hpp
BabelWiresLib/Path/: path.cpp  path.hpp  pathStep.cpp  pathStep.hpp
BabelWiresLib/Processors/: commonProcessor.cpp  commonProcessor.hpp  parallelProcessor.cpp  parallelProcessor.hpp  processor.cpp  processor.hpp  processorFactory.cpp  processorFactory.hpp  processorFactoryRegistry.cpp  processorFactoryRegistry.hpp  valueProcessor.cpp  valueProcessor.hpp
BabelWiresLib/Project/: project.cpp  project.hpp  projectContext.hpp  projectData.cpp  projectData.hpp  projectIds.hpp  projectUtilities.cpp  projectUtilities.hpp  projectVisitable.hpp  uiPosition.cpp  uiPosition.hpp
BabelWiresLib/ProjectExtra/: connectionDescription.cpp  connectionDescription.hpp  dataLocation.cpp  dataLocation.hpp  projectDataLocation.cpp  projectDataLocation.hpp  projectObserver.cpp  projectObserver.hpp  projectUtilities.cpp  projectUtilities.hpp
BabelWiresLib/Serialization/: dataBundle.hpp  dataBundle_inl.hpp  dataSerialization.hpp  dataSerialization_inl.hpp  projectBundle.cpp  projectBundle.hpp  projectSerialization.cpp  projectSerialization.hpp
BabelWiresLib/TypeSystem/: compoundType.cpp  compoundType.hpp  editableValue.cpp  editableValue.hpp  enumValue.cpp  enumValue.hpp  featureWrapper.hpp  featureWrapperCommon.hpp  intType.cpp  intType.hpp  intValue.cpp  intValue.hpp  primitiveType.hpp  registeredType.hpp  standardFeatureWrappers.hpp  stringType.cpp  stringValue.cpp  subtypeOrder.hpp  subtypeUtils.hpp  type.cpp  type.hpp  typeConstructor.cpp  typeConstructor.hpp  typeConstructorArguments.cpp  typeConstructorArguments.hpp  typeConstructor_inl.hpp  (+22 more)
BabelWiresQtUi/: CMakeLists.txt  applicationIdentity.hpp  babelWiresQtUiExport.hpp  mainWindow.cpp  mainWindow.hpp  uiMain.cpp  uiMain.hpp  uiProjectContext.hpp
BaseLib/: CMakeLists.txt  baseLibExport.hpp  common.cpp  common.hpp  exceptions.cpp  exceptions.hpp  libRegistration.cpp  libRegistration.hpp  productInfo.cpp  productInfo.hpp  result.hpp  types.cpp  uuid.cpp  uuid.hpp
Common/: CMakeLists.txt  exceptions.cpp  exceptions.hpp  multiKeyMap.hpp  productInfo.hpp  types.cpp  types.hpp  uuid.cpp  uuid.hpp
(+1410 files in other folders)
