SET( BABELWIRESLIB_SRCS
	Project/project.cpp
	Project/FeatureElements/featureElement.cpp
	Project/FeatureElements/featureElementData.cpp
	Project/FeatureElements/ProcessorElement/processorElement.cpp
	Project/FeatureElements/SourceFileElement/sourceFileElement.cpp
	Project/FeatureElements/TargetFileElement/targetFileElement.cpp
	Project/FeatureElements/fileElement.cpp
	Project/FeatureElements/failedFeature.cpp
	Project/FeatureElements/editTree.cpp
	Project/FeatureElements/contentsCache.cpp
	Project/FeatureElements/SourceFileElement/sourceFileElementData.cpp
	Project/FeatureElements/TargetFileElement/targetFileElementData.cpp
	Project/FeatureElements/ProcessorElement/processorElementData.cpp
	Project/FeatureElements/ValueElement/valueElement.cpp
	Project/FeatureElements/ValueElement/valueElementData.cpp
	Project/FeatureElements/modifyFeatureScope.cpp
	Project/Modifiers/modifier.cpp
	Project/Modifiers/modifierData.cpp
	Project/Modifiers/localModifier.cpp
	Project/Modifiers/arraySizeModifier.cpp
	Project/Modifiers/arraySizeModifierData.cpp
	Project/Modifiers/connectionModifier.cpp
	Project/Modifiers/connectionModifierData.cpp
	Project/Modifiers/activateOptionalsModifierData.cpp
	Project/Modifiers/selectUnionBranchModifierData.cpp
	Project/Modifiers/valueAssignmentData.cpp
	Project/uiPosition.cpp
	Project/projectData.cpp
	ProjectExtra/projectObserver.cpp
	ProjectExtra/connectionDescription.cpp
	Project/projectUtilities.cpp
	ProjectExtra/dataLocation.cpp
	FileFormat/sourceFileFormat.cpp
	FileFormat/targetFileFormat.cpp
	FileFormat/fileFeature.cpp
	Types/Array/arrayFeatureUtils.cpp
	Types/Array/arrayType.cpp
	Types/Array/arrayTypeConstructor.cpp
	Types/Array/arrayValue.cpp
	Types/Map/Commands/addEntryToMapCommand.cpp
	Types/Map/Commands/removeEntryFromMapCommand.cpp
	Types/Map/Commands/replaceMapEntryCommand.cpp
	Types/Map/Commands/setMapSourceTypeCommand.cpp
	Types/Map/Commands/setMapTargetTypeCommand.cpp
	Types/Map/Commands/changeEntryKindCommand.cpp
	Types/Map/Commands/setMapCommand.cpp
	Types/Map/mapFeature.cpp
	Types/Map/mapValue.cpp
	Types/Map/MapEntries/mapEntryData.cpp
	Types/Map/MapEntries/oneToOneMapEntryData.cpp
	Types/Map/MapEntries/allToSameFallbackMapEntryData.cpp
	Types/Map/MapEntries/allToOneFallbackMapEntryData.cpp
	Types/Map/MapProject/mapProject.cpp
	Types/Map/MapProject/mapProjectEntry.cpp
	Types/Map/MapProject/mapSerialization.cpp
	Types/Map/mapType.cpp
	Types/Map/mapTypeConstructor.cpp
	Types/Map/SumOfMaps/sumOfMapsType.cpp
	Types/Record/recordType.cpp
	Types/Record/recordValue.cpp
	Types/Record/recordFeatureUtils.cpp
	Types/RecordWithVariants/recordWithVariantsType.cpp
	Types/RecordWithVariants/recordWithVariantsValue.cpp
	Processors/parallelProcessor.cpp
	Processors/processorFactoryRegistry.cpp
	Processors/processor.cpp
	Processors/processorFactory.cpp
	Processors/commonProcessor.cpp
	Features/feature.cpp
	Features/childValueFeature.cpp
	Features/compoundFeature.cpp
	Features/recordFeature.cpp
	Features/recordWithOptionalsFeature.cpp
	Features/arrayFeature.cpp
	Features/simpleValueFeature.cpp
	Features/Path/featurePath.cpp
	Features/Path/pathStep.cpp
	Features/rootFeature.cpp
	Features/valueFeature.cpp
	Features/valueFeatureHelper.cpp
	Features/unionFeature.cpp
	Serialization/projectBundle.cpp
	Project/Commands/activateOptionalCommand.cpp
	Project/Commands/addElementCommand.cpp
	Project/Commands/deactivateOptionalCommand.cpp
	Project/Commands/removeElementCommand.cpp
	Project/Commands/moveElementCommand.cpp
	Project/Commands/addModifierCommand.cpp
	Project/Commands/removeModifierCommand.cpp
	Project/Commands/addEntriesToArrayCommand.cpp
	Project/Commands/removeEntryFromArrayCommand.cpp
	Project/Commands/changeFileCommand.cpp
	Project/Commands/pasteElementsCommand.cpp
	Project/Commands/setExpandedCommand.cpp
	Project/Commands/removeFailedModifiersCommand.cpp
	Project/Commands/resizeElementCommand.cpp
	Project/Commands/selectUnionBranchCommand.cpp
	Project/Commands/setArraySizeCommand.cpp
	Project/Commands/Subcommands/removeSimpleModifierSubcommand.cpp
	Project/Commands/Subcommands/removeAllEditsSubcommand.cpp
	Project/Commands/Subcommands/adjustModifiersInArraySubcommand.cpp
	TypeSystem/typeSystem.cpp
	Types/Enum/addBlankToEnum.cpp
	Types/Enum/enumFeature.cpp
	Types/Enum/enumType.cpp
	Types/Enum/enumValue.cpp
	Types/Int/intType.cpp
	Types/Int/intValue.cpp
	Types/Int/intTypeConstructor.cpp
	Types/Int/intFeature.cpp
	Types/Rational/rationalFeature.cpp
	Types/Rational/rationalValue.cpp
	Types/Rational/rationalType.cpp
	Types/Rational/rationalTypeConstructor.cpp
	Types/Sum/sumType.cpp
	Types/Sum/sumTypeConstructor.cpp
	Types/String/stringType.cpp
	Types/String/stringValue.cpp
	Types/String/stringFeature.cpp
	TypeSystem/type.cpp
	TypeSystem/typeRef.cpp
	TypeSystem/typeConstructorArguments.cpp
	TypeSystem/typeConstructor.cpp
	TypeSystem/value.cpp
	TypeSystem/valuePath.cpp
	ValueNames/valueNames.cpp
	ValueNames/sparseValueNamesImpl.cpp
	ValueNames/contiguousValueNamesImpl.cpp
	libRegistration.cpp
   )

ADD_LIBRARY( BabelWiresLib ${BABELWIRESLIB_SRCS} )
TARGET_INCLUDE_DIRECTORIES( BabelWiresLib PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/.. )
TARGET_LINK_LIBRARIES(BabelWiresLib PUBLIC tinyxml2 Common)
if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
	# Required when using <execution> with gcc.
	TARGET_LINK_LIBRARIES(BabelWiresLib PUBLIC tbb)
endif()