SET( BABELWIRESLIB_SRCS
	Project/project.cpp
	Project/Nodes/node.cpp
	Project/Nodes/nodeData.cpp
	Project/Nodes/ProcessorNode/processorNode.cpp
	Project/Nodes/SourceFileElement/sourceFileElement.cpp
	Project/Nodes/TargetFileElement/targetFileElement.cpp
	Project/Nodes/FileNode/fileNode.cpp
	Project/Nodes/editTree.cpp
	Project/Nodes/contentsCache.cpp
	Project/Nodes/SourceFileElement/sourceFileElementData.cpp
	Project/Nodes/TargetFileElement/targetFileElementData.cpp
	Project/Nodes/ProcessorNode/processorNodeData.cpp
	Project/Nodes/ValueElement/valueElement.cpp
	Project/Nodes/ValueElement/valueElementData.cpp
	Project/Modifiers/modifier.cpp
	Project/Modifiers/modifierData.cpp
	Project/Modifiers/localModifier.cpp
	Project/Modifiers/arraySizeModifier.cpp
	Project/Modifiers/arraySizeModifierData.cpp
	Project/Modifiers/connectionModifier.cpp
	Project/Modifiers/connectionModifierData.cpp
	Project/Modifiers/activateOptionalsModifierData.cpp
	Project/Modifiers/selectRecordVariantModifierData.cpp
	Project/Modifiers/valueAssignmentData.cpp
	Project/uiPosition.cpp
	Project/projectData.cpp
	ProjectExtra/projectObserver.cpp
	ProjectExtra/connectionDescription.cpp
	Project/projectUtilities.cpp
	ProjectExtra/dataLocation.cpp
	FileFormat/sourceFileFormat.cpp
	FileFormat/targetFileFormat.cpp
	Types/Array/arrayType.cpp
	Types/Array/arrayTypeConstructor.cpp
	Types/Array/arrayValue.cpp
	Types/File/fileType.cpp
	Types/File/fileTypeConstructor.cpp
	Types/Map/Commands/addEntryToMapCommand.cpp
	Types/Map/Commands/removeEntryFromMapCommand.cpp
	Types/Map/Commands/replaceMapEntryCommand.cpp
	Types/Map/Commands/setMapSourceTypeCommand.cpp
	Types/Map/Commands/setMapTargetTypeCommand.cpp
	Types/Map/Commands/changeEntryKindCommand.cpp
	Types/Map/Commands/setMapCommand.cpp
	Types/Map/mapValue.cpp
	Types/Map/MapEntries/mapEntryData.cpp
	Types/Map/MapEntries/oneToOneMapEntryData.cpp
	Types/Map/MapEntries/allToSameFallbackMapEntryData.cpp
	Types/Map/MapEntries/allToOneFallbackMapEntryData.cpp
	Types/Map/MapProject/mapProject.cpp
	Types/Map/MapProject/mapProjectEntry.cpp
	Types/Map/MapProject/mapSerialization.cpp
	Types/Map/mapType.cpp
	Types/Map/mapTypeConstructor.cpp
	Types/Map/SumOfMaps/sumOfMapsType.cpp
	Types/Record/recordType.cpp
	Types/Record/recordValue.cpp
	Types/RecordWithVariants/recordWithVariantsType.cpp
	Types/RecordWithVariants/recordWithVariantsValue.cpp
	Processors/parallelProcessor.cpp
	Processors/processorFactoryRegistry.cpp
	Processors/processor.cpp
	Processors/processorFactory.cpp
	ValueTree/valueTreeNode.cpp
	ValueTree/valueTreeChild.cpp
	ValueTree/valueTreeRoot.cpp
	ValueTree/valueTreeHelper.cpp
	Path/path.cpp
	Path/pathStep.cpp
	Serialization/projectBundle.cpp
	Project/Commands/activateOptionalCommand.cpp
	Project/Commands/addElementCommand.cpp
	Project/Commands/deactivateOptionalCommand.cpp
	Project/Commands/removeElementCommand.cpp
	Project/Commands/moveElementCommand.cpp
	Project/Commands/addModifierCommand.cpp
	Project/Commands/removeModifierCommand.cpp
	Project/Commands/addEntriesToArrayCommand.cpp
	Project/Commands/removeEntryFromArrayCommand.cpp
	Project/Commands/changeFileCommand.cpp
	Project/Commands/pasteElementsCommand.cpp
	Project/Commands/setExpandedCommand.cpp
	Project/Commands/removeFailedModifiersCommand.cpp
	Project/Commands/resizeElementCommand.cpp
	Project/Commands/selectRecordVariantCommand.cpp
	Project/Commands/setArraySizeCommand.cpp
	Project/Commands/Subcommands/removeSimpleModifierSubcommand.cpp
	Project/Commands/Subcommands/removeAllEditsSubcommand.cpp
	Project/Commands/Subcommands/adjustModifiersInArraySubcommand.cpp
	TypeSystem/typeSystem.cpp
	Types/Enum/addBlankToEnum.cpp
	Types/Enum/enumType.cpp
	Types/Enum/enumValue.cpp
	Types/Int/intType.cpp
	Types/Int/intValue.cpp
	Types/Int/intTypeConstructor.cpp
	Types/Rational/rationalValue.cpp
	Types/Rational/rationalType.cpp
	Types/Rational/rationalTypeConstructor.cpp
	Types/Sum/sumType.cpp
	Types/Sum/sumTypeConstructor.cpp
	Types/String/stringType.cpp
	Types/String/stringValue.cpp
	Instance/instanceUtils.cpp
	TypeSystem/compoundType.cpp
	TypeSystem/type.cpp
	TypeSystem/typeRef.cpp
	TypeSystem/typeConstructorArguments.cpp
	TypeSystem/typeConstructor.cpp
	TypeSystem/value.cpp
	TypeSystem/valuePath.cpp
	ValueNames/valueNames.cpp
	ValueNames/sparseValueNamesImpl.cpp
	ValueNames/contiguousValueNamesImpl.cpp
	libRegistration.cpp
   )

ADD_LIBRARY( BabelWiresLib ${BABELWIRESLIB_SRCS} )
TARGET_INCLUDE_DIRECTORIES( BabelWiresLib PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/.. )
TARGET_LINK_LIBRARIES(BabelWiresLib PUBLIC tinyxml2 Common)
if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
	TARGET_LINK_LIBRARIES(BabelWiresLib PUBLIC)
endif()